--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@module-federation/nextjs-mf": "^8.7.5",
+    "@mui/material": "^6.1.6",
     "next": "14",
     "react": "18",
     "react-dom": "18",
